.metadata/.plugins/org.eclipse.cdt.ui/can2.build.log
14:18:11 **** Incremental Build of configuration Debug for project can2 ****
make -j4 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -c -x assembler-with-cpp --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f405rgtx.o" "../Startup/startup_stm32f405rgtx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F405xx -DUSE_HAL_DRIVER -DDEBUG -c -I../Inc -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/stm32f4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F405xx -DUSE_HAL_DRIVER -DDEBUG -c -I../Inc -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/stm32f4xx_hal_msp.d" -MT"Src/stm32f4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/stm32f4xx_hal_msp.o"
arm-none-eabi-gcc "../Src/stm32f4xx_hal_timebase_tim.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F405xx -DUSE_HAL_DRIVER -DDEBUG -c -I../Inc -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/stm32f4xx_hal_timebase_tim.d" -MT"Src/stm32f4xx_hal_timebase_tim.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/stm32f4xx_hal_timebase_tim.o"
arm-none-eabi-gcc "../Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32F405xx -DUSE_HAL_DRIVER -DDEBUG -c -I../Inc -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/stm32f4xx_it.d" -MT"Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/stm32f4xx_it.o"
../Src/main.c:68:1: warning: return type defaults to 'int' [-Wimplicit-int]
 HAL_CAN_ConfigFilter(CAN_HandleTypeDef *hcan, CAN_FilterTypeDef *sFilterConfig)
 ^~~~~~~~~~~~~~~~~~~~
../Src/main.c:68:1: error: conflicting types for 'HAL_CAN_ConfigFilter'
In file included from ../Inc/stm32f4xx_hal_conf.h:256:0,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:30,
                 from ../Inc/main.h:31,
                 from ../Src/main.c:22:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_can.h:662:19: note: previous declaration of 'HAL_CAN_ConfigFilter' was here
 HAL_StatusTypeDef HAL_CAN_ConfigFilter(CAN_HandleTypeDef *hcan, CAN_FilterTypeDef *sFilterConfig);
                   ^~~~~~~~~~~~~~~~~~~~
../Src/main.c: In function 'HAL_CAN_ConfigFilter':
../Src/main.c:69:52: error: expected declaration specifiers or '...' before ')' token
 void USER_CAN_ConfigFilter(CAN_HandleTypeDef *hcan,)
                                                    ^
../Src/main.c:87:5: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
     {
     ^
../Src/main.c:106:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
../Src/main.c:163:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
../Src/main.c:206:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
../Src/main.c:243:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
../Src/main.c:280:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
../Src/main.c:302:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
../Src/main.c:319:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
../Src/main.c:324:1: error: expected '{' at end of input
 }
 ^
../Src/main.c: At top level:
../Src/main.c:54:13: warning: 'MX_GPIO_Init' declared 'static' but never defined [-Wunused-function]
 static void MX_GPIO_Init(void);
             ^~~~~~~~~~~~
../Src/main.c:55:13: warning: 'MX_CAN1_Init' declared 'static' but never defined [-Wunused-function]
 static void MX_CAN1_Init(void);
             ^~~~~~~~~~~~
../Src/main.c:56:13: warning: 'MX_CAN2_Init' declared 'static' but never defined [-Wunused-function]
 static void MX_CAN2_Init(void);
             ^~~~~~~~~~~~
../Src/main.c: In function 'HAL_CAN_ConfigFilter':
../Src/main.c:324:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [Src/subdir.mk:36: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

14:18:15 Build Failed. 13 errors, 5 warnings. (took 3s.651ms)

